fix(panel): use border for margin
This ensures that the button widget extends to the screen edge, allowing clicks
from the edge of the screen. This might look weird if someone uses an extension
to make the panel transparent as there will be a black border around the button,
but it looks correct with the default theming.

--- a/gnome-shell/src/gnome-shell-sass/widgets/_panel.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_panel.scss
@@ -4,7 +4,7 @@
 $panel_corner_radius: $base_border_radius+1;
 $panel_fg_color: #ccc;
 $panel_height: 1.86em;
-$panel_button_margin: 2px;
+$panel_button_margin: 3px;
 $panel_icon_padding: 3px;
 
 
@@ -41,8 +41,7 @@ $panel_icon_padding: 3px;
 
   // panel menus
   .panel-button {
-    margin-top: $panel_button_margin;
-    margin-bottom: $panel_button_margin;
+    border: $panel_button_margin solid $panel_bg_color;
     border-radius: 9999px;
     font-weight: bold;
     color: $panel_fg_color;
